hente konsumenter for et scope
