# maskinporten-management-rest-server/src/main/kotlin/no/kartverket/maskinportenmanagement/restserver/Main.kt
@@ -7,13 +7,20 @@ import io.ktor.server.engine.applicationEnvironment
 import io.ktor.server.engine.connector
 import io.ktor.server.engine.embeddedServer
 import io.ktor.server.netty.Netty
+import io.ktor.server.plugins.di.dependencies
+import io.ktor.server.request.receive
 import io.ktor.server.response.respond
 import io.ktor.server.response.respondText
 import io.ktor.server.routing.get
 import io.ktor.server.routing.openapi.describe
 import io.ktor.server.routing.openapi.hide
+import io.ktor.server.routing.post
 import io.ktor.server.routing.routing
 import io.ktor.utils.io.ExperimentalKtorApi
+import no.kartverket.maskinportenmanagement.client.MaskinportenManagementClient
+import no.kartverket.maskinportenmanagement.restserver.models.ConsumerAccess
+import no.kartverket.maskinportenmanagement.restserver.models.ScopeAccessRequest
+import no.kartverket.maskinportenmanagement.restserver.models.ScopeAccessResponse
 
 fun main() {
     val config = loadApplicationConfig()
@@ -30,6 +37,7 @@ fun Application.module() {
     configureAccessLogging()
     configureSerialization()
     configureErrorHandling()
+    configureMaskinportenManagement()
     configureRouting()
 }
 
@@ -45,5 +53,13 @@ fun Application.configureRouting() {
         get("/openapi") {
             call.respondText(spec, ContentType.Application.Json)
         }.hide()
+
+        post("/scopeaccess") {
+            val client: MaskinportenManagementClient by dependencies
+            val request = call.receive<ScopeAccessRequest>()
+            val access = client.getScopeAccess(request.scope)
+
+            call.respond(ScopeAccessResponse(access.map(ConsumerAccess::of)))
+        }.describe(scopeAccessOperation)
     }
 }
