# maskinporten-management-rest-server/src/main/kotlin/no/kartverket/maskinportenmanagement/restserver/models/FieldError.kt
@@ -1,0 +1,7 @@
+package no.kartverket.maskinportenmanagement.restserver.models
+
+import kotlinx.serialization.Serializable
+import no.kartverket.maskinportenmanagement.client.validation.ValidationCode
+
+@Serializable
+data class FieldError(val field: String, val code: ValidationCode, val message: String)
