# maskinporten-management-rest-server/src/main/kotlin/no/kartverket/maskinportenmanagement/restserver/models/ScopeAccessResponse.kt
@@ -1,0 +1,8 @@
+package no.kartverket.maskinportenmanagement.restserver.models
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class ScopeAccessResponse(
+    val access: List<ConsumerAccess>,
+)
